Fixed pika test kit notes title

--- a/frontend/javascripts/dynexp/pika_test/intro.html
+++ b/frontend/javascripts/dynexp/pika_test/intro.html
@@ -1,5 +1,5 @@
 <div class="notes-box">
-  <h4 class="text-left">A.{{experiment.name}}KKKKK</h4>
+  <h4 class="text-left">A.{{experiment.name}}</h4>
   <textarea focus-on="editNotes" type="text" placeholder="Enter Note" class="exp-name H1 text-left notes-textarea" ng-model="notes[indexAB]"> </textarea>
   <div class="text-center notes-button-div">
     <button class="notes-button" ng-click="cancel()">Cancel</button>
