showing both ethernet and wifi ip on screen

--- a/browser/resources/splash.html
+++ b/browser/resources/splash.html
@@ -39,6 +39,9 @@
 	<div id="ip-address">
 		<span class="span-text ip-text"></span>
 		<span class="span-value ip-value"></span>
+		<br>
+		<span class="span-text ip-wifi-text"></span>
+		<span class="span-value ip-wifi-value"></span>
 		<span class="span-message ip-message"></span>
 	</div>
 	<div id="version">
